@@ -114,6 +114,24 @@ sub chomp_switch {
     }
 }
 
+sub get_text_from_switch {
+    # process [[ -I'.' ]] into [[ . ]]
+    my $s = substr($ARGV[0], 2);
+    if (!$s) {
+        shift @ARGV;
+        $s = $ARGV[0];
+    }
+    if ($s) {
+        my $c = substr($s,0,1);
+        if ($c eq '"' || $c eq "'") {
+            if (substr($s,-1,1) eq $c) {
+                $s = substr($s,1,-1);
+            }
+        }
+    }
+    return $s;
+}
+
 push @Use, "no warnings";
 push @Use, "no strict";
 
@@ -124,24 +142,19 @@ while (@ARGV && substr($ARGV[0], 0, 1) eq '-')
         $verbose = 1;
         shift @ARGV;
     }
-    elsif ($ARGV[0] eq '-I') {
-        shift @ARGV;
-        my $lib = shift @ARGV;
-        unshift @INC, $lib;
-    }
     elsif (substr($ARGV[0], 0, 2) eq '-I') {
-        my $lib = substr($ARGV[0], 2);
+        my $lib = get_text_from_switch();
         unshift @INC, $lib;
         shift @ARGV;
     }
     elsif (substr($ARGV[0], 0, 2) eq '-e' || substr($ARGV[0], 0, 2) eq '-E') {
-        my $arg = shift @ARGV;
-        my $source = substr($arg, 2) || shift(@ARGV);
+        my $source = get_text_from_switch();
         push @e_switch, $source;
         $Perlito5::FILE_NAME = '-e';
         if ($verbose) {
             warn "// source from command line: $source";
         }
+        shift @ARGV;
     }
     elsif (substr($ARGV[0], 0, 2) eq '-c') {
         $compile_only = 1;
@@ -150,7 +163,7 @@ while (@ARGV && substr($ARGV[0], 0, 1) eq '-')
         chomp_switch();
     }
     elsif (substr($ARGV[0], 0, 2) eq '-C') {
-        $backend = substr($ARGV[0], 2);
+        $backend = get_text_from_switch();
         $execute = 0;
         shift @ARGV;
     }
